FullQa New/src/objects/NPX_Survey_Records__c.object
<CustomObject>
    <description>Custom object to store all the survey records created in CRM</description>
    <fields>
        <fullName>Account_CARR__c</fullName>
        <formula>Account__r.CARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account CARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPX Survey Records</relationshipLabel>
        <relationshipName>NPX_Survey_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AvaTax_Current_Plan_Tier__c</fullName>
        <label>AvaTax Current Plan Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvaTax_Live__c</fullName>
        <label>AvaTax Live</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaTax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AvaTax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM_Segment__c</fullName>
        <label>CAM Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CARR__c</fullName>
        <label>CARR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Live__c</fullName>
        <label>CC Live</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Case__c</fullName>
        <label>CPO AvaTax Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Driver__c</fullName>
        <label>CPO AvaTax Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_GoLive__c</fullName>
        <label>CPO AvaTax GoLive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Score__c</fullName>
        <label>CPO AvaTax Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Usage__c</fullName>
        <label>CPO AvaTax Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Backfile__c</fullName>
        <label>CPO Backfile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CC_Case__c</fullName>
        <label>CPO CC Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CC_Driver__c</fullName>
        <label>CPO CC Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_CC_GoLive__c</fullName>
        <label>CPO CC GoLive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_Score__c</fullName>
        <label>CPO CertCapture Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Notices__c</fullName>
        <label>CPO Notices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Overall_Score__c</fullName>
        <label>CPO Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Case__c</fullName>
        <label>CPO Returns Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Driver__c</fullName>
        <label>CPO Returns Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_GoLive__c</fullName>
        <label>CPO Returns GoLive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Score__c</fullName>
        <label>CPO Returns Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO__c</fullName>
        <label>CPO AR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>NPX Survey Records</relationshipLabel>
        <relationshipName>NPX_Survey_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Date__c</fullName>
        <label>Case Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPX_Survey_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>Case Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <label>Case Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>NPX Survey Records</relationshipLabel>
        <relationshipName>NPX_Survey_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CertCapture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CertCapture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Role__c</fullName>
        <description>Respondent&apos;s self-described role with their company</description>
        <label>Company Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connector_Lookup__c</fullName>
        <label>Connector(Lookup)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Avalara_Account_Role__c</fullName>
        <formula>Contact__r.Avalara_Account_Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Avalara Account Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_ID__c</fullName>
        <label>Contact Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPX Survey Records</relationshipLabel>
        <relationshipName>NPX_Survey_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Product__c</fullName>
        <description>The main product used by the respondent</description>
        <label>Core Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Executive_Contact__c</fullName>
        <formula>Contact__r.ExecutiveContact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F1C__c</fullName>
        <formula>IF(ISNULL( F1__c ),0,1)</formula>
        <label>Feel - Avalara Cares Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F1__c</fullName>
        <description>Degree Avalara cares about customers</description>
        <label>Feel - Avalara Cares</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F2C__c</fullName>
        <formula>IF(ISNULL( F2__c ),0,1)</formula>
        <label>Feel - Quality Products/Services Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <description>Overall quality of Avalara&apos;s Products and Services</description>
        <label>Feel - Quality Products/Services</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F3C__c</fullName>
        <formula>IF(ISNULL( F3__c ),0,1)</formula>
        <label>Feel - Ease of Doing Business Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F3__c</fullName>
        <description>Overall ease of doing business with Avalara</description>
        <label>Feel - Ease of Doing Business</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Purchase_Date__c</fullName>
        <label>First Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Reminder_Date__c</fullName>
        <label>First Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Followup_Owner1__c</fullName>
        <defaultValue>&quot;matthew.johnson@avalara.com&quot;</defaultValue>
        <label>Followup Owner1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Followup_Owner2__c</fullName>
        <defaultValue>&quot;cathleen.wellbrock@avalara.com&quot;</defaultValue>
        <label>Followup Owner2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Followup_Updated_Status__c</fullName>
        <label>Followup Updated Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Followup_Updated__c</fullName>
        <label>Followup to be Updated</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Recomendations__c</fullName>
        <label>General Recomendations</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ideal_Relationship_Expectations_Value__c</fullName>
        <description>Are we meeting expectations, value from 1-5</description>
        <label>Ideal Relationship - Expectations Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ideal_Relationship__c</fullName>
        <description>What expectations does the customer have of Avalara?</description>
        <label>Ideal Relationship</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Improvement_Comment__c</fullName>
        <description>How can Avalara improve?</description>
        <label>Improvement Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initiating_Event_Description__c</fullName>
        <label>Initiating Event Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiating_event_date__c</fullName>
        <label>Initiating event date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interest_in_learning_more__c</fullName>
        <description>Customer would like to learn more about the following Avalara solutions</description>
        <label>Interest in learning more</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invitation_Sent_Date__c</fullName>
        <label>Invitation Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <description>Respondent&apos;s job within their company</description>
        <label>Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <label>Last Login Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS_CHI_Communications_Count__c</fullName>
        <formula>IF(ISNULL( MS_CHI_Communications__c ),0,1)</formula>
        <label>MS CHI - Communications Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MS_CHI_Communications__c</fullName>
        <description>Your interactions with Avalara Managed Services team members</description>
        <label>MS CHI - Communications</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MS_CHI_On_Time_Budget_Count__c</fullName>
        <formula>IF(ISNULL( MS_CHI_On_Time_Budget__c ),0,1)</formula>
        <label>MS CHI - On Time/Budget Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MS_CHI_On_Time_Budget__c</fullName>
        <label>MS CHI - On Time/Budget</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MS_CHI_Quality_Provided_Count__c</fullName>
        <formula>IF(ISNULL( MS_CHI_Quality_Provided__c ),0,1)</formula>
        <label>MS CHI - Quality Provided Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MS_CHI_Quality_Provided__c</fullName>
        <description>Avalara&apos;s Managed Services Team&apos;s ability to meet your expectations in the quality of services provided</description>
        <label>MS CHI - Quality Provided</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Category__c</fullName>
        <formula>IF( Primary_Score__c &lt;7,&quot;Detractor&quot;,IF(Primary_Score__c&lt;9,&quot;Passive&quot;,IF(Primary_Score__c&gt;8,&quot;Promoter&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <formula>IF(Primary_Score__c&lt;7,-1,IF(Primary_Score__c&gt;8,1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPX_Record_Created__c</fullName>
        <label>NPX Record Created</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificationList1__c</fullName>
        <defaultValue>&quot;DG-NPS-Notification@avalara.com&quot;</defaultValue>
        <label>NotificationList1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P1C__c</fullName>
        <description>Used for accurate average value reporting</description>
        <formula>IF(ISNULL(P1__c),0,1)</formula>
        <label>Product CHI - Ease of Use Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P1__c</fullName>
        <description>The product on making it easy to perform your role</description>
        <label>Product CHI - Ease of Use</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2C__c</fullName>
        <description>Used for accurate average reporting</description>
        <formula>IF(ISNULL( P2__c ),0,1)</formula>
        <label>Product CHI - Functionality Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2__c</fullName>
        <description>The product functionality you need to complete your day-to-day activities</description>
        <label>Product CHI - Functionality</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P3C__c</fullName>
        <formula>IF(ISNULL( P3__c),0,1)</formula>
        <label>Product CHI - Overall Quality Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P3__c</fullName>
        <description>The overall product quality has met the requirements of your tax operations team</description>
        <label>Product CHI - Overall Quality</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_CHI_Communications_Count__c</fullName>
        <formula>IF(ISNULL( PS_CHI_Communications__c ),0,1)</formula>
        <label>PS CHI - Communications Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_CHI_Communications__c</fullName>
        <description>Your interactions with Avalara Professional Services team members</description>
        <label>PS CHI - Communications</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_CHI_On_Time_Budget_Count__c</fullName>
        <formula>IF(ISNULL( PS_CHI_On_Time_Budget__c ),0,1)</formula>
        <label>PS CHI- On Time/Budget Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_CHI_On_Time_Budget__c</fullName>
        <description>Whether the Professional Services were provided on-time and on-budget</description>
        <label>PS CHI - On Time/Budget</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_CHI_Quality_Count__c</fullName>
        <formula>IF(ISNULL( PS_CHI_Quality__c ),0,1)</formula>
        <label>PS CHI - Quality Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_CHI_Quality__c</fullName>
        <description>Team&apos;s ability to meet your expectations in the quality of services provided</description>
        <label>PS CHI - Quality</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Comment__c</fullName>
        <label>Primary Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Score__c</fullName>
        <label>Primary Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Service_Recomendations__c</fullName>
        <description>What specific product/service recomendations?</description>
        <label>Product/Service Recomendations</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>R1C__c</fullName>
        <formula>IF(ISNULL( R1__c),0,1)</formula>
        <label>Relationship CHI - Contract Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R1__c</fullName>
        <description>The interactions you have had around reviewing, renewing, or amending contractual documentation</description>
        <label>Relationship CHI - Contract</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R2C__c</fullName>
        <formula>IF(ISNULL( R2__c),0,1)</formula>
        <label>Relationship CHI - Ease_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R2__c</fullName>
        <description>The interactions you have had around reviewing, renewing, or amending contractual documentation</description>
        <label>Relationship CHI - Ease</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R3C__c</fullName>
        <formula>IF(ISNULL( R3__c),0,1)</formula>
        <label>Relationship CHI - Interactions Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R3__c</fullName>
        <description>The interactions you have had around reviewing, renewing, or amending contractual documentation</description>
        <label>Relationship CHI - Interactions</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Contact__c</fullName>
        <formula>Contact__r.Reference_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_for_Avalara__c</fullName>
        <description>Has the customer agreed to reference Avalara and in what capacity?</description>
        <label>Reference for Avalara</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Contact_Person__c</fullName>
        <label>Relationship Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Received_Date__c</fullName>
        <label>Response Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Returns_Live__c</fullName>
        <label>Returns Live</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_s__c</fullName>
        <formula>IF(
Company_Role__c =&quot;I am involved in the day-to-day operational use and/or benefit from Avalara&apos;s products and services.&quot;, &quot;End User&quot;,
IF(
Company_Role__c =&quot;I contribute to the decisions with regards to purchasing, but do not directly use Avalara&apos;s products or services as part of my job.&quot;,&quot;Influencer&quot;,
IF(
Company_Role__c =&quot;I am responsible for the decision to work with Avalara.&quot;,&quot;Decision Maker&quot;,
IF(
Company_Role__c =&quot;I am involved in the day-to-day operational use and/or benefit from Avalara&apos;s products and services.,I contribute to the decisions with regards to purchasing, but do not directly use Avalara&apos;s products or services as part of my job.&quot;, &quot;Influencer/End User&quot;,
IF(
Company_Role__c =&quot;I am involved in the day-to-day operational use and/or benefit from Avalara&apos;s products and services.,I am responsible for the decision to work with Avalara.&quot;,&quot;Decision Maker/End User&quot;,
IF(
Company_Role__c =&quot;I contribute to the decisions with regards to purchasing, but do not directly use Avalara&apos;s Excise products or services as part of my job.,I am responsible for the decision to work with Avalara.&quot;,&quot;Decision Maker/Influencer&quot;,
IF(
Company_Role__c =&quot;I am involved in the day-to-day operational use and/or benefit from Avalara&apos;s products and services.,I contribute to the decisions with regards to purchasing, but do not directly use Avalara&apos;s products or services as part of my job.,I am res&quot;,&quot;Decision Maker/Influencer/End User&quot;,
IF(
Company_Role__c =&quot;I am responsible for the decision to work with Avalara.,I contribute to the decisions with regards to purchasing, but do not directly use Avalara&apos;s products or services as part of my job.&quot;, &quot;Decision Maker/Influencer&quot;,&quot;&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1C__c</fullName>
        <formula>IF(ISNULL (S1__c ),0,1)</formula>
        <label>Support CHI - Quality Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S1__c</fullName>
        <description>The quality of communications from Support to your tax operations team</description>
        <label>Support CHI - Quality</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S2C__c</fullName>
        <formula>IF(ISNULL( S2__c ),0,1)</formula>
        <label>Support CHI - Resolution Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S2__c</fullName>
        <description>The time it takes to resolve business critical issues</description>
        <label>Support CHI - Resolution</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S3C__c</fullName>
        <formula>IF(ISNULL( S3__c ),0,1)</formula>
        <label>Support CHI - Response Time Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S3__c</fullName>
        <label>Support CHI - Response Time</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVM_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this customer belong to a company in the Strategic Value Management Program</description>
        <label>SVM Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SatMetrix_Tags__c</fullName>
        <label>SatMetrix Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Reminder_Date__c</fullName>
        <label>Second Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Notification_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Notification Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <label>Support Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Details_URL__c</fullName>
        <label>Survey Details URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey_ID__c</fullName>
        <label>Survey ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Language_Code__c</fullName>
        <label>Survey Language Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Contact__c</fullName>
        <formula>Contact__r.Tax_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Types__c</fullName>
        <label>Tax Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact__c</fullName>
        <formula>Contact__r.Technical_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technical Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Reminder_Date__c</fullName>
        <label>Third Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TrustFile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TrustFile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Contact__c</fullName>
        <label>User Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V1C__c</fullName>
        <formula>IF(ISNULL( V1__c ),0,1)</formula>
        <label>Value CHI - Advocate Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>V1__c</fullName>
        <description>The statement &quot;I feel that Avalara understands my company&apos;s needs&quot;</description>
        <label>Value CHI - Advocate</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>V2C__c</fullName>
        <formula>IF(ISNULL( V2__c),0,1)</formula>
        <label>Value CHI - Contracted Value Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>V2__c</fullName>
        <description>Avalara&apos;s ability to meet the value you have contracted with us</description>
        <label>Value CHI - Contracted Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>V3C__c</fullName>
        <formula>IF(ISNULL( V3__c ),0,1)</formula>
        <label>Value CHI - Solutions Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>V3__c</fullName>
        <description>The information provided to you on Avalara&apos;s Solution Suite</description>
        <label>Value CHI - Solutions</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VOC_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VOC Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_NPS_Score__c</fullName>
        <formula>IF(X1_Primary_Score__c&lt;7,-1,IF(X1_Primary_Score__c&gt;8,1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>+1 NPS Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_Primary_Score__c</fullName>
        <formula>Primary_Score__c +1</formula>
        <label>+1 Primary Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>